[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI-Godot/Save.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_left = 0.369
anchor_top = 0.445
anchor_right = 0.626
anchor_bottom = 0.548
margin_left = -377.856
margin_top = -267.0
margin_right = 382.976
margin_bottom = 271.2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -42.0
margin_right = 129.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 258.0
margin_bottom = 14.0
text = "Name:"
align = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 258.0
margin_bottom = 42.0
rect_min_size = Vector2( 140, 0 )
align = 2

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 258.0
margin_bottom = 66.0
text = "Save"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 258.0
margin_bottom = 84.0
align = 2

[node name="YesOrNoVBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -19.0
margin_right = 79.5
margin_bottom = 19.0
alignment = 1

[node name="Label" type="Label" parent="YesOrNoVBoxContainer"]
margin_right = 159.0
margin_bottom = 14.0
text = "Do you want to override?"

[node name="HBoxContainer" type="HBoxContainer" parent="YesOrNoVBoxContainer"]
margin_top = 18.0
margin_right = 159.0
margin_bottom = 38.0
alignment = 1

[node name="YesButton" type="Button" parent="YesOrNoVBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 80.0
margin_bottom = 20.0
text = "yes"

[node name="NoButton" type="Button" parent="YesOrNoVBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 112.0
margin_bottom = 20.0
text = "no"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="draw" from="YesOrNoVBoxContainer" to="." method="_on_YesOrNoVBoxContainer_draw"]
[connection signal="pressed" from="YesOrNoVBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="YesOrNoVBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
